# novel-editor

./: .gitignore  README.md  TODO.md  index.html  netlify.toml  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vercel.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  release.yml
docs/: AI_AGENT_FUNCTIONALITY_ANALYSIS.md  AI_AGENT_FUNCTIONALITY_IMPROVEMENT.md  API.md  AUTO_UPDATE_SETUP.md  DEVELOPER.md  PLUGIN_API.md  USER_MANUAL.md
e2e/: app.spec.ts  editor.spec.ts  exportPerfPomodoro.spec.ts  extended.spec.ts  keyboardShortcuts.spec.ts  pluginInstall.spec.ts  regexSearch.spec.ts  tagSystem.spec.ts
playwright-report/: index.html
public/: manifest.json  sw.js
scripts/: generate-key.ps1
server/: package.json
server/src/: index.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: Extensions.test.ts  accessibility.test.ts  agentGraph.test.ts  agentMemory.test.ts  agentNodes.test.ts  agentToolsIntegration.test.ts  aiService.test.ts  aiServiceExtended.test.ts  autoSaveStore.test.ts  backupService.test.ts  cloudSync.test.ts  collaboration.test.ts  collaborationStore.test.ts  commentStore.test.ts  crashRecovery.test.ts  customThemeStore.test.ts  documentCacheStore.test.ts  documentSessionStore.test.ts  documentStore.test.ts  export.test.ts  highContrastStore.test.ts  hooksExports.test.ts  i18n.test.ts  idb.test.ts  integration.test.ts  langchainTools.test.ts  nodes.test.ts  (+22 more)
(+140 files in other folders)
